--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -4,9 +4,20 @@
   "description": "",
   "main": "index.html",
   "scripts": {
+    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run lite",
-    "lite": "lite-server"
+    "start:windows": "npm run watch:all-windows",
+    "start:mac": "npm run watch:all-mac",
+    "lite": "lite-server",
+    "scss": "node-sass -o css/ css/",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "imagemin": "imagemin img/* -o dist/img",
+    "clean": "rimraf dist",
+    "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
+    "watch:scss-windows": "onchange \"css/*.scss\" -- npm run scss",
+    "watch:all-windows": "parallelshell \"npm run watch:scss-windows\" \"npm run lite\"",
+    "watch:scss-mac": "onchange 'css/*.scss' -- npm run scss",
+    "watch:all-mac": "parallelshell 'npm run watch-mac:scss' 'npm run lite'"
   },
   "repository": {
     "type": "git",
@@ -19,7 +30,14 @@
   },
   "homepage": "https://github.com/simaosnapper/nucamp-bootstrap#readme",
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "copyfiles": "^2.2.0",
+    "imagemin-cli": "^5.1.0",
+    "lite-server": "^2.5.4",
+    "node-sass": "^4.13.1",
+    "onchange": "^6.1.0",
+    "parallelshell": "^3.0.1",
+    "rimraf": "^3.0.2",
+    "usemin-cli": "^0.5.1"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
