--- a/react/nucampsite/package.json
+++ b/react/nucampsite/package.json
@@ -12,10 +12,13 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-popper": "^1.3.7",
+    "react-redux": "^7.2.0",
+    "react-redux-form": "^1.16.14",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "typeface-lobster": "0.0.72",
     "typeface-open-sans": "0.0.75"
   },
