--- a/react-native/nucampsite/package.json
+++ b/react-native/nucampsite/package.json
@@ -13,6 +13,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
@@ -22,6 +23,10 @@
     "react-navigation": "^2.0.1",
     "react-navigation-drawer": "^2.4.11",
     "react-navigation-stack": "^2.3.12",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "save": "^2.4.0"
   },
   "devDependencies": {
