--- a/react-native/nucampsite/package.json
+++ b/react-native/nucampsite/package.json
@@ -13,12 +13,14 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "^2.0.1",
     "react-navigation-drawer": "^2.4.11",
