React-Native week 4 - we made it boy

--- a/react-native/nucampsite/app.json
+++ b/react-native/nucampsite/app.json
@@ -22,7 +22,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "co.nucamp.nucampsite.student"
+    },
+    "android": {
+      "package": "co.nucamp.nucampsite.student"
     }
   }
 }
